--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+[ ] 100% spec coverage for Literate itself.
 [ ] Separate runner (__FILE__ == $0 is a quick hack) 
 [ ] More matchers (consider plug in RSpec or MSpec)
 [ ] Resolve issue with the contexts and setups. 
